# xtermcontrol

./: .clang-format  .gitignore  COPYING  ChangeLog  Makefile.am  Makefile.in  acinclude.m4  aclocal.m4  bootstrap.sh  config.h.in  configure  configure.ac
doc/: Makefile.am  Makefile.in  xtermcontrol.roff
src/: Makefile.am  Makefile.in  configuration.c  configuration.h  controlseq.h  getopt.c  getopt.h  getopt1.c  xtermcontrol.c  xtermcontrol.h
tests/: Makefile.am  Makefile.in  xtermcontrol.test
